--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
+  overflow-y: hidden;
+}
+
+h1, h2, h3, h4, h5, h6, article, a, p, ul, li, ol {
+  font-family: 'Poppins', sans-serif;
+}
+
+h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, article::selection, a::selection, p::selection, ul::selection, li::selection, ol::selection {
+   background-color: #009c66;
+}
+
+*{
+  margin: 0;
 }
 
 code {
